Добавлена разметка и оформление формы подписки на рассылку в футере

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <!-- Подвал сайта -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-box">
+        <div class="footer-box-address">
           <a class="logo link" href="./index.html" lang="en"
             ><span class="logo-web">Web</span>
             <span class="white-studio">Studio</span></a
@@ -423,7 +423,7 @@
           </address>
         </div>
 
-        <div class="footer-box">
+        <div class="footer-box-social">
           <b class="footer-join">присоединяйтесь</b>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
@@ -453,6 +453,22 @@
               ></a>
             </li>
           </ul>
+        </div>
+        <div class="footer-box-form">
+          <b class="footer-join">Подпишитесь на рассылку</b>
+          <form class="footer-form" action="" method="post" name="followered">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            /><button class="footer-form-button" type="submit">
+              Подписаться
+              <svg class="icon">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
