Создан "фукционал" для модального окна

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           для вашего бизнеса
         </h1>
 
-        <a class="hero-button link" href="">Заказать услугу</a>
+        <a class="hero-button link" href="" data-modal-open>Заказать услугу</a>
       </section>
       <!-- О нас секция -->
       <section class="about section">
@@ -472,5 +472,7 @@
         </div>
       </div>
     </footer>
+    <!-- Скрипт для подключения модального окна -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
