--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-
-        <a class="hero-button link" href="" data-modal-open>Заказать услугу</a>
+        <button class="hero-button link" type="submit" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
       <!-- О нас секция -->
       <section class="about section">
@@ -472,6 +473,13 @@
         </div>
       </div>
     </footer>
+    <!-- Модальное окно -->
+    <div class="backdrop is-hidden animate-modal" data-modal>
+      <div class="modal">
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <button type="submit" data-modal-close>Close X</button>
+      </div>
+    </div>
     <!-- Скрипт для подключения модального окна -->
     <script src="./js/modal.js"></script>
   </body>
