Внесены мелкие недочеты в формы футера и кнонки героя

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
         <div class="footer-box-form">
           <b class="footer-join">Подпишитесь на рассылку</b>
-          <form class="footer-form" action="" method="post" name="followered">
+          <form class="footer-form" action="#" method="get" name="followered">
             <input
               class="footer-form-input"
               type="email"
