--- a/index.html
+++ b/index.html
@@ -475,10 +475,14 @@
     </footer>
     <!-- Модальное окно -->
     <div class="backdrop is-hidden animate-modal" data-modal>
-      <div class="modal">
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-        <button type="submit" data-modal-close>Close X</button>
-      </div>
+      <form class="form-modal">
+        <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
+        <button class="form-modal-button" type="submit" data-modal-close>
+          <svg class="btn-close">
+            <use href="./imags/form-svg/vector.svg"></use>
+          </svg>
+        </button>
+      </form>
     </div>
     <!-- Скрипт для подключения модального окна -->
     <script src="./js/modal.js"></script>
