Вопрос по анимации кнопок,

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <button class="form-modal-button" type="submit" data-modal-close>
           <svg class="btn-close">
-            <use href="./imags/form-svg/vector.svg"></use>
+            <use href="./images/form-svg/vector.svg"></use>
           </svg>
         </button>
       </form>
