Сделана верстка модального окна, анимирована кнопка закрытия

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
             <li class="item">
               <a class="contakt-link link" href="mailto:info@devstudio.com"
                 ><svg class="icon-mail">
-                  <use href="./images/sprite.svg#icon-mail"></use></svg
-                >info@devstudio.com
+                  <use href="./images/sprite.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
               </a>
             </li>
             <li class="item">
-              <a class="contakt-link link" href="tel:+380961111111"
-                ><svg class="icon-phone">
+              <a class="contakt-link link" href="tel:+380961111111">
+                <svg class="icon-phone">
                   <use href="./images/sprite.svg#icon-phone"></use>
                 </svg>
                 +38 096 111 11 11
@@ -191,8 +192,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка твитера"
                       ><svg class="icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -204,10 +206,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка ликедина"
                       ><svg class="icon">
-                        <use
-                          href="./images/sprite.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -234,8 +235,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка твитера"
                       ><svg class="icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -247,10 +249,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка ликедина"
                       ><svg class="icon">
-                        <use
-                          href="./images/sprite.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -276,8 +277,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка твитера"
                       ><svg class="icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -289,10 +291,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка ликедина"
                       ><svg class="icon">
-                        <use
-                          href="./images/sprite.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -319,8 +320,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка твитера"
                       ><svg class="icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -332,10 +334,9 @@
                   <li class="name-social-item">
                     <a href="" target="_blank" aria-label="иконка ликедина"
                       ><svg class="icon">
-                        <use
-                          href="./images/sprite.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -437,8 +438,9 @@
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка твитера"
                 ><svg class="icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -450,8 +452,9 @@
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка ликедина"
                 ><svg class="icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -479,9 +482,30 @@
         <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <button class="form-modal-button" type="submit" data-modal-close>
           <svg class="btn-close">
-            <use href="./images/form-svg/vector.svg"></use>
+            <use href="./images/sprite.svg#icon-vector"></use>
           </svg>
         </button>
+        <div class="form-modal-field">
+          <label class="form-modal-label" for="name">Имя</label>
+          <input class="form-modal-input" type="text" name="name" id="name" />
+        </div>
+        <div class="form-modal-field">
+          <label class="form-modal-label" for="tel">Телефон</label>
+          <input class="form-modal-input" type="tel" name="tel" id="tel" />
+        </div>
+        <div class="form-modal-field">
+          <label class="form-modal-label" for="email">Почта</label>
+          <input class="form-modal-input" type="email" name="email" id="email" />
+        </div>
+        <div class="form-modal-comments">
+          <label class="form-modal-label" for="comments">Комментарий</label>
+          <textarea class="form-modal-textarea" name="comments" id="comments"></textarea>
+        </div>
+        <div class="form-modal-checkbox">
+          <input class="form-modal-checkbox-input" type="checkbox" name="policy" id="policy">
+          <label class="form-modal-checkbox-label" for="policy">Соглашаюсь с рассылкой и принимаю <a class="form-modal-link" href="">Условия договора</a> </label>
+        </div>
+        <button class="form-modal-btn" type="submit">Отправить</button>
       </form>
     </div>
     <!-- Скрипт для подключения модального окна -->
