Сделан новый спрайт

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <button class="form-modal-button" type="submit" data-modal-close>
           <svg class="btn-close">
-            <use href="./images/sprite.svg#icon-vector"></use>
+            <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
         <div class="form-modal-field">
