--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </div>
       </div>
     </footer>
-    <!-- Модальное окно -->
+    <!--                    Модальное окно -->
     <div class="backdrop is-hidden animate-modal" data-modal>
       <form class="form-modal" action="#">
         <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
@@ -485,41 +485,38 @@
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
-        <div class="form-modal-field">
-          <label class="form-modal-label" for="name">Имя</label>
-          <input class="form-modal-input" type="text" name="name" id="name" />
-        </div>
-        <div class="form-modal-field">
-          <label class="form-modal-label" for="tel">Телефон</label>
-          <input class="form-modal-input" type="tel" name="tel" id="tel" />
-        </div>
-        <div class="form-modal-field">
-          <label class="form-modal-label" for="email">Почта</label>
-          <input
-            class="form-modal-input"
-            type="email"
-            name="email"
-            id="email"
-          />
-        </div>
-        <div class="form-modal-comments">
+        <label class="form-modal-field">
+          <input class="form-modal-input" type="text" name="name" placeholder=" " required/>
+          <span class="form-modal-label">Имя</span>
+          <svg  class="form-modal-icon">
+            <use href="./images/sprite.svg#icon-person"></use>
+          </svg>
+        </label>
+        <label class="form-modal-field">
+          <input class="form-modal-input" type="tel" name="tel" placeholder=" " required/>
+          <span class="form-modal-label">Телефон</span>
+          <svg  class="form-modal-icon">
+            <use href="./images/sprite.svg#icon-form-phone"></use>
+          </svg>
+        </label>
+        <label class="form-modal-field">
+          <input class="form-modal-input" type="email" name="email" placeholder=" "/>
+          <span class="form-modal-label">Почта</span>
+          <svg  class="form-modal-icon">
+            <use href="./images/sprite.svg#icon-form-email"></use>
+          </svg>
+        </label>
+        <!-- Оставим в диве, сделаем вторым вариантом old school -->
+        <div class="form-modal-comments-wrapper">
           <label class="form-modal-label" for="comments">Комментарий</label>
-          <textarea
-            class="form-modal-textarea"
-            name="comments"
-            id="comments"
-          ></textarea>
+          <textarea class="form-modal-textarea" name="comments id="comments" placeholder=" "></textarea>
         </div>
-        <div class="form-modal-checkbox">
-          <input
-            class="form-modal-checkbox-input"
-            type="checkbox"
-            name="policy"
-            id="policy"
-            value="accept-policy"
-          />
-          <label class="form-modal-checkbox-label" for="policy"
-            >Соглашаюсь с рассылкой и принимаю
+        <div class="form-modal-checkbox-wrapper">
+          <input class="form-modal-checkbox visually-hidden" type="checkbox" name="policy" id="policy" value="accept-policy" required/>
+          <svg  class="form-modal-icon-check" id="policy">
+            <use href="./images/sprite.svg#icon-check"></use>
+          </svg>
+          <label class="form-modal-checkbox-label">Соглашаюсь с рассылкой и принимаю
             <a class="form-modal-link" href="">Условия договора</a>
           </label>
         </div>
