--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         </div>
         <div class="footer-box-form">
           <b class="footer-join">Подпишитесь на рассылку</b>
-          <form class="footer-form" action="#" method="get" name="followered">
+          <form class="footer-form" action="#" method="get">
             <input
               class="footer-form-input"
               type="email"
@@ -478,7 +478,7 @@
     </footer>
     <!--                    Модальное окно -->
     <div class="backdrop is-hidden animate-modal" data-modal>
-      <form class="form-modal" action="#">
+      <form class="form-modal" action="#" method="get">
         <b class="form-modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <button class="form-modal-button" type="button" data-modal-close>
           <svg class="btn-close">
@@ -508,7 +508,7 @@
         </label>
         <!-- Оставим в диве, сделаем вторым вариантом old school -->
         <div class="form-modal-comments-wrapper">
-          <textarea class="form-modal-textarea" name="comments id="comments" placeholder=" "></textarea>
+          <textarea class="form-modal-textarea" name="comments" id="comments" placeholder=" "></textarea>
           <label class="form-modal-label" for="comments">Комментарий</label>
         </div>    
           <label class="form-modal-checkbox-wrapper">
