--- a/portfolio.html
+++ b/portfolio.html
@@ -358,8 +358,7 @@
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка твитера"
                 ><svg class="icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg></a>
             </li>
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка фейсбука">
@@ -371,8 +370,7 @@
             <li class="footer-social-item">
               <a href="" target="_blank" aria-label="иконка ликедина"
                 ><svg class="icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
             </li>
           </ul>
         </div>
